no brands image

--- a/contactMF.html
+++ b/contactMF.html
@@ -37,16 +37,22 @@
         </nav>
     </header>
     <div class="shrink-wrap">
-        <section class="title-section container col-one">
+        <!-- <section class="title-section container col-one">
             <h1 class="title-text">part<br>ners.</h1>
             <img class="small-img teton-img" src="/images/pyramid-race-finish.jpg" alt="Summit photo from the Grand Teton">
-        </section>
-        <section class="meat col-two">
+        </section> -->
+        <!-- <section class="meat col-two">
       <div class="icon-box">
           <img class="hoka-logo" src="/images/blog-photos/hokOneLogo.svg" alt="hoka logo">
           <img class="compress-logo" src="/images/blog-photos/compressportLogo.svg" alt="compressport logo">
           <img class="rrunning-logo" src="/images/blog-photos/rRunninglogo.png" alt="RRunnning logo">
-      </div>
+      </div> -->
+      <br>
+      <br>
+      <br>
+    <br>
+    <br>
+    <br>
       <div class="contact">
           <h2>For all inquiries:</h2>
           <h4><i class="fa-regular fa-envelope email-icon"></i> bdhiman244@gmail.com</h4>
