--- a/home.html
+++ b/home.html
@@ -45,9 +45,9 @@
                 <li class="nav__item">
                     <a target="_blank" href="https://bendhiman.substack.com/" class="nav__link">Blog</a>
                 </li>
-                <li class="nav__item">
+                <!-- <li class="nav__item">
                     <a href="/contactMF.html" class="nav__link">Partners</a>
-                </li>
+                </li> -->
                 <!-- <li class="nav__item">
                     <a href="/about.html" class="nav__link">about</a>
                 </li> -->
