--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
         <!-- <div class="logo">
             <img class="logo-img" src="./images/intitialsLogo.png" alt="logo">
         </div> -->
-        <h1 class="name-text">b.dhiman</h1>
+        <h1 class="name-text">ben<br>dhiman</h1>
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item">
