--- a/coaching.html
+++ b/coaching.html
@@ -34,7 +34,7 @@
     
                 <li class="nav__item"><a target="_blank" href="https://bendhiman.substack.com/" class="nav__link">Blog</a></li>
                 <li class="nav__item"><a href="/Results.html" class="nav__link">Results</a></li>
-                <li class="nav__item"><a href="/contactMF.html" class="nav__link">Partners</a></li>
+                <!-- <li class="nav__item"><a href="/contactMF.html" class="nav__link">Partners</a></li> -->
             </ul>
         </nav>
     </header>
@@ -47,20 +47,20 @@
             <h3 class="home-button-text">home</h3>
         </div>
         </a>
-        <p class="preface-hero">Dream Big.<br>Train Smart.<br>Have Fun!</p>
+        <p class="preface-hero">Dream Big.<br>Train Smart.<br>Get Results.</p>
     </section>
 <section class="body-content container">
     <section class="section-hype container">
         <h2 class="pitch">
             So much depends upon our preparation and mindset
         </h2>
-        <p class="pitch-subtext">As your coach we will optimize your training and race preparation to get results!</p>
+        <p class="pitch-subtext">As your coach we will optimize your training and race preparation to achieve your goals</p>
         <h2 class="pitch">Training Plans for:</h2>
             <div class="image-div">
             <img class="race_logo" src="/images/grrlogo.png" alt="logo grand raid"><br>
-            <img class="race_logo_small" src="/images/logogrp.png" alt="logo grand raid"><br>
+            <!-- <img class="race_logo_small" src="/images/logogrp.png" alt="logo grand raid"><br> -->
             <img class="race_logo" src="/images/UTMB.png" alt="logo grand raid">
-            <img class="race_logo-detail" src="/images/Untitledmaraultra.png" alt="logo grand raid">
+            <img class="race_logo-detail" src="/images/TEXTCOACHING.png" alt="logo grand raid">
             </div>
     </section>
     <h4 class="language-subhead">Français / English</h4>
