--- a/Results.html
+++ b/Results.html
@@ -32,13 +32,13 @@
                 <li class="nav__item"><a href="/coaching.html" class="nav__link">Coaching</a></li>
                 
                 <li class="nav__item"><a target="_blank" href="https://bendhiman.substack.com/" class="nav__link">Blog</a></li>
-                <li class="nav__item"><a href="/contactMF.html" class="nav__link">Partners</a></li>
+                <!-- <li class="nav__item"><a href="/contactMF.html" class="nav__link">Partners</a></li> -->
             </ul>
         </nav>
     </header>
     <section class="title-section container">
         <h1 class="title-text">res<br>ults.</h1>
-        <img class="pyramid-img" src="/images/blog-photos/resultsColor.jpg" alt="finish line pump">
+        <img class="pyramid-img" src="/images/blog-photos/" alt="finish line pump">
     </section>
     <section class="section-body container">
         <ul class="results__list">
