More little things

--- a/Results.html
+++ b/Results.html
@@ -37,9 +37,9 @@
         </nav>
     </header>
     <section class="title-section container">
-        <h1 class="title-text">res<br>ults.</h1>
-        <img class="pyramid-img" src="/images/blog-photos/" alt="finish line pump">
-    </section>
+        <h1 class="title-text">results</h1>
+        <!-- <img class="pyramid-img" src="/images/blog-photos/" alt="finish line pump"> -->
+    </section> 
     <section class="section-body container">
         <ul class="results__list">
             <li class="list__title">&nbsp;</li>
