--- a/Results.html
+++ b/Results.html
@@ -42,7 +42,7 @@
     </section> 
     <section class="section-body container">
         <ul class="results__list">
-            <li class="list__title">&nbsp;</li>
+            <!-- <li class="list__title">&nbsp;</li> -->
             <li class="results-list__year">2023</li>
             <li class="results-list__item"><span class="race-title">Grand Trail des Templiers</span><br>80km 3800m d+<br><i
                     class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;7:00 <i
