--- a/Results.html
+++ b/Results.html
@@ -29,7 +29,7 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="/home.html" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="/coaching.html" class="nav__link">Coaching</a></li>
+                <li class="nav__item"><a href="/coachingNMF.html" class="nav__link">Coaching</a></li>
                 
                 <li class="nav__item"><a target="_blank" href="https://bendhiman.substack.com/" class="nav__link">Blog</a></li>
                 <!-- <li class="nav__item"><a href="/contactMF.html" class="nav__link">Partners</a></li> -->
@@ -38,7 +38,6 @@
     </header>
     <section class="title-section container">
         <h1 class="title-text">results</h1>
-        <!-- <img class="pyramid-img" src="/images/blog-photos/" alt="finish line pump"> -->
     </section> 
     <section class="section-body container">
         <ul class="results__list">
