--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
                     <a href="/Results.html" class="nav__link">Results</a>
                 </li>
                 <li class="nav__item">
-                    <a href="/coaching.html" class="nav__link">Coaching</a>
+                    <a href="/coachingNMF.html" class="nav__link">Coaching</a>
                 </li>
                 <li class="nav__item">
                     <a target="_blank" href="https://bendhiman.substack.com/" class="nav__link">Blog</a>
