--- a/Results.html
+++ b/Results.html
@@ -42,6 +42,12 @@
     <section class="section-body container">
         <ul class="results__list">
             <li class="results-list__year">2024</li>
+            <li class="results-list__item"><span class="race-title">Andorra Trail 100</span><br>108km 7000m d+<br><i
+                    class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;13:25 <i
+                    class="fa-solid fa-trophy trophy-silver"></i>&nbsp;2<sup class="sup">nd</sup><br>
+                <i class="fa-regular fa-pen-to-square pen-icon"></i>&nbsp;<a class="recap"
+                    href="https://bendhiman.substack.com/p/sharky-waters">Recap</a>
+            </li>
             <li class="results-list__item"><span class="race-title">Madeira Island Ultra Trail</span><br>115km 7300m d+<br><i
                     class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;13:52 <i
                     class="fa-solid fa-trophy trophy-gold"></i>&nbsp;1<sup class="sup">st</sup><br>
@@ -66,9 +72,7 @@
                     <i class="fa-regular fa-pen-to-square pen-icon"></i>&nbsp;<a class="recap"
                         href="https://bendhiman.substack.com/p/race-recap">Recap</a>
             </li>
-            <li class="results-list__item"><span class="race-title">10km de Lacq</span><br><i
-                    class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;31:04 
-            </li>
+           
             <li class="results-list__year">2022</li>
             <li class="results-list__item"><span class="race-title">Grand Raid Reunion</span><br>168km 10200m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;24:20 <i class="fa-solid fa-trophy trophy-bronze"></i>&nbsp;3<sup class="sup">rd</sup><br>
             <i class="fa-regular fa-pen-to-square pen-icon"></i>&nbsp;<a class="recap"
@@ -82,8 +86,7 @@
             <li class="results-list__item"><span class="race-title">GTVO</span><br>74km 4600m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;8:30 <i class="fa-solid fa-trophy trophy-gold"></i>&nbsp;1<sup class="sup">st</sup><br>
             <i class="fa-regular fa-pen-to-square pen-icon"></i>&nbsp;<a class="recap"
                 href="./ValOssau.html">Recap</a></li>
-            <li class="results-list__item"><span class="race-title">Hautacam Trails</span><br>22km 1650m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;2:08 <i class="fa-solid fa-trophy trophy-gold"></i>&nbsp;1<sup class="sup">st</sup></li>
-            <li class="results-list__item"><span class="race-title">Bagneres Classic</span><br>25km 1500m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;2:09 <i class="fa-solid fa-trophy trophy-gold"></i>&nbsp;1<sup class="sup">st</sup></li>
+           
             <li class="results-list__year">2021</li>
             <li class="results-list__item"><span class="race-title">Maxi Race Annecy</span><br>110km 6600m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;14:34 <i class="fa-solid fa-trophy trophy-silver"></i>&nbsp;2<sup class="sup">nd</sup></li>
             <li class="results-list__item"><span class="race-title">Grand Raid Pyrenees</span><br>220km 13000m d+<br><i class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;39:40 <i class="fa-solid fa-trophy trophy-silver"></i>&nbsp;2<sup class="sup">nd</sup></li>
