--- a/Results.html
+++ b/Results.html
@@ -41,7 +41,9 @@
     </section> 
     <section class="section-body container">
         <ul class="results__list">
-            <li class="results-list__year">2024</li>
+            <li class="results-list__year">2024</li><li class="results-list__item"><span class="race-title">Grand Raid Reunion</span><br>175km 10600m d+<br><i
+                    class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;24:42 <i
+                    class="fa-solid fa-trophy trophy-bronze"></i>&nbsp;3<sup class="sup">rd</sup><br>
             <li class="results-list__item"><span class="race-title">Andorra Trail 100</span><br>108km 7000m d+<br><i
                     class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;13:25 <i
                     class="fa-solid fa-trophy trophy-silver"></i>&nbsp;2<sup class="sup">nd</sup><br>
