updated results yo

--- a/Results.html
+++ b/Results.html
@@ -41,7 +41,19 @@
     </section> 
     <section class="section-body container">
         <ul class="results__list">
-            <li class="results-list__year">2024</li><li class="results-list__item"><span class="race-title">Grand Raid Reunion</span><br>175km 10600m d+<br><i
+            <li class="results-list__year">2024</li>
+            <li class="results-list__item"><span class="race-title">Asics Saintélyon</span><br>82km 2500m d+<br><i
+                    class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;6:03 <i
+                    class="fa-solid fa-trophy trophy-silver"></i>&nbsp;2<sup class="sup">nd</sup><br>
+                <i class="fa-regular fa-pen-to-square pen-icon"></i>&nbsp;<a class="recap"
+                    href="https://bendhiman.substack.com/p/nightshift">Recap</a>
+            </li>
+            <li class="results-list__item"><span class="race-title">Lourdes-Tarbes Half Marathon</span><br>21.1km 90m d+<br><i
+                    class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;1:06 <i
+                    class="fa-solid fa-trophy trophy-gold"></i>&nbsp;1<sup class="sup">st</sup><br>
+                <i class="fa-regular fa-pen-to-square pen-icon"></i>&nbsp;<a class="recap"
+                    href="https://bendhiman.substack.com/p/road-rambling">Recap</a>
+            </li><li class="results-list__item"><span class="race-title">Grand Raid Reunion</span><br>175km 10600m d+<br><i
                     class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;24:42 <i
                     class="fa-solid fa-trophy trophy-bronze"></i>&nbsp;3<sup class="sup">rd</sup><br>
             <li class="results-list__item"><span class="race-title">Andorra Trail 100</span><br>108km 7000m d+<br><i
