--- a/Results.html
+++ b/Results.html
@@ -42,6 +42,12 @@
     <section class="section-body container">
         <ul class="results__list">
             <li class="results-list__year">2025</li>
+            <li class="results-list__item"><span class="race-title">UTMB</span><br>175km 9800m d+<br><i
+                class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;19:51 <i
+                class="fa-solid fa-trophy trophy-silver"></i>&nbsp;2<sup class="sup">nd</sup><br>
+            <i class="fa-regular fa-pen-to-square pen-icon"></i>&nbsp;<a class="recap"
+                href="https://bendhiman.substack.com/p/the-thrill-is-gone">Recap</a>
+        </li>
             <li class="results-list__item"><span class="race-title">Lavaredo Ultra Trail</span><br>120km 5800m d+<br><i
                 class="fa-solid fa-stopwatch stopwatch-icon"></i>&nbsp;11:49 <i
                 class="fa-solid fa-trophy trophy-gold"></i>&nbsp;1<sup class="sup">st</sup><br>
